Migrate code from JDK8 to modularized JDK17